@@ -3,6 +3,7 @@ oslo.messaging (1.3.0~a9-2) unstable; urgency=medium
   * New upstream release.
   * Standards-Version: is now 3.9.5.
   * Updated (build-)dependency.
+  * Better usage of testr/subunit.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 21 Mar 2014 17:10:55 +0800
 
